# muscle

./: .gitignore  AGENTS.md  CLAUDE.md  Forsight-plan.md  GroupTink-collab.md  LICENSE  MUSCLE_PLAN.md  MUSCLE_REVIEW_REPORT.md  MUSCLE_ROADMAP.md  PLAN_OPUS_4_7_DELEGATION_OVERHAUL.md  PROJECT_INDEX.md  README.md  SECURITY.md  coverage.json  install.sh  main.py  pyproject.toml  self_improving_agent.py  test_api.py  test_production.py  test_scle_full.py
.claude-plugin/: marketplace.json
.opencode/: agents  commands  opencode.json
docs/: PRIVACY.md  REMAINING_TODOS.md  TERMS.md  architecture.md  migration-and-data-safety.md  muscle-architecture.excalidraw  opensrc-integration-plan.md  project-first-growth-model-pack-roadmap.md  release-notes-2026-04-16-project-first-growth.md  release-notes-2026-05-01-plugin-readiness.md  research-alignment-nlah-meta-harness.md
examples/: README.md
examples/go_cli/: README.md  task.txt
examples/javascript_ts/: README.md  task.txt
examples/python_fastapi/: README.md  task.txt
examples/rust_actor/: README.md  task.txt
frontend/: index.html  server.py
frontend/css/: style.css
frontend/js/: app.js
scripts/: opencode-setup.sh  uninstall.sh  update.sh
skills/code-loop/: SKILL.md
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_cli_commands.py  test_concurrent_review.py  test_data_stores.py  test_install_lifecycle.py  test_learning_pipeline.py  test_review_pipeline.py  test_session_lifecycle.py  test_shadow_nightly.py  test_shadow_worktree.py
tests/unit/: test_active_review_runtime.py  test_agent_generator.py  test_agent_kb_fetcher.py  test_backup_manager.py  test_budget_manager.py  test_change_capture.py  test_claude_publisher.py  test_cli.py  test_cli_model_memory.py  test_cli_mutation_and_lifeline.py  test_cli_optimize.py  test_cli_review.py  test_cli_run_offline.py  test_code_generator.py  test_code_review_types.py  test_code_reviewer.py  test_command_evidence.py  test_committee_reviewer.py  test_cost_optimizer.py  test_cross_project_learning.py  test_delegation_metrics.py  test_escalation.py  test_evaluator_registry.py  test_evaluators_assertions.py  test_evaluators_base.py  test_evaluators_compiler.py  test_evaluators_linter.py  test_evaluators_tester.py  test_evolver.py  test_fix_generator.py  test_fix_generator_rollback.py  test_fix_tracker.py  test_git_adapter.py  test_git_history_forensics.py  test_github_adapter.py  test_github_integration.py  test_gitlab_adapter.py  test_handoff_generator.py  test_host_memory_optimizer.py  test_host_memory_templates.py  (+57 more)
tools/muscle/: Dockerfile.scle  __init__.py  active_review.py  audit_presenter.py  backup_manager.py  budget_manager.py  change_capture.py  claude_publisher.py  cli.py  code_generator.py  command_evidence.py  cost_optimizer.py  delegation_metrics.py  discovery.py  doctor.py  escalation.py  evaluator_registry.py  evolver.py  git_history_forensics.py  host_runtime.py  interactive.py  io_safety.py  learning_ingestor.py  legacy_importer.py  lesson_resolver.py  loop_controller.py  m27_client.py  memory_decision_engine.py  model_identity.py  model_pack_standard.py  model_pack_validation.py  model_packs.py  output_filters.py  packs.py  project_builder.py  project_fingerprint.py  project_memory.py  project_memory_schema.py  (+13 more)
(+191 files in other folders)
