[project]
name = "muscle"
version = "0.1.0"
description = "MUSCLE - MiniMax Unified Self-Correcting Learning Engine"
readme = "README.md"
requires-python = ">=3.10"
# Fix: PKG-01. Dependencies pinned with upper bounds to prevent surprise
# breakage from the next major release of any transitive or direct dep.
# Upper bounds target the next major version; revisit before each release.
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.6,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "click>=8.1.0,<9.0.0",
    "rich>=13.0.0,<15.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "readchar>=2.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
    "black>=23.0.0,<26.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "types-pyyaml>=6.0,<7.0",
]

[project.scripts]
muscle = "tools.muscle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["readchar", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["tools.muscle"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.muscle/*",
    "tools/scle/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@overload",
]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "tomli>=2.4.1",
]
